[package]
name = "russessin"
version = "0.1.0"
edition = "2024"
description = "REST API service for systemd-logind (loginctl) operations"
license = "MIT"
authors = ["russessin contributors"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
zbus = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
axum-test = "16"
mockall = "0.13"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[package.metadata.deb]
maintainer = "russessin contributors"
copyright = "2026, russessin contributors"
extended-description = "A REST API service that wraps systemd-logind (loginctl) operations, enabling remote session and user management over HTTP."
depends = "$auto, libdbus-1-3"
section = "admin"
priority = "optional"
assets = [
    ["target/release/russessin", "usr/bin/", "755"],
    ["config/russessin.toml", "etc/russessin/russessin.toml", "644"],
]
conf-files = ["/etc/russessin/russessin.toml"]
systemd-units = { unit-name = "russessin", enable = false, start = false }
